syntax = "proto3";

option java_generic_services = true;
option java_package = "io.grpc.examples";

service Greeter {
    rpc SayHello ( HelloRequest) returns (  HelloReply ) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
